# MoMoney

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  tests.yml
config/examples/: accounts.yaml.example  budget_app_category_map.yaml.example  categories.yaml.example  merchants.yaml.example  parsers.yaml.example  rules.yaml.example
scripts/: backfill_transfers.py  reprocess_flagged.py
src/: cli.py  config.py
src/categorize/: amount_rules.py  claude_ai.py  historical.py  merchant_match.py  pipeline.py  receipt_lookup.py  transfer_detect.py
src/database/: dedup.py  models.py  queries.py  repository.py  schema.sql
src/gmail/: client.py
src/parsers/: base.py  budget_app.py  csv_parser.py  qfx_sgml.py  qfx_xml.py
src/sheets/: overrides.py  push.py
src/watcher/: observer.py
tests/: conftest.py  test_cli.py  test_cli_category.py  test_config.py  test_config_categories.py  test_docker.py  test_refund_handling.py
tests/test_categorize/: test_amount_rules.py  test_claude_ai.py  test_historical.py  test_merchant_match.py  test_pipeline.py  test_transfer_detect.py
tests/test_database/: test_dedup.py  test_migrations.py  test_queries.py  test_repo.py
tests/test_gmail/: test_client.py  test_receipt_lookup.py
tests/test_parsers/: test_base.py  test_budget_app.py  test_csv_parser.py  test_qfx_sgml.py  test_qfx_xml.py
tests/test_sheets/: test_overrides.py  (+1 more)
(+10 files in other folders)
